src/style.css
/* ... */
.activity-page {
	display: block;
	border-bottom: 1px solid var(--T-border-color);
	border-top: 1px solid white;
	padding: 1px 0;
	padding-left: 0.1875rem;
	background: var(--T-bg);
}
.activity-page-bottom {
	display: flex;
	height: 1.5rem;
}

activity-users {
	/*text-align: right;*/
	white-space: pre;
	overflow-x: visible;
	padding: 0 3px;
	display: flex;
	justify-content: flex-end;
}

.activity-scroller > scroll-inner {
	display: flex;
	flex-flow: column;
}

.action-user .avatar {
	border: 1px solid gray;
}
.action-user {
	position: relative;
}
.action-user::after {
	content: '✏️';
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	text-align: center;
	text-shadow:
		-.5px -.5px 1px black,
		1px 1px 0px black;
}

/* todo: the css/html for watch activity items is mostly a hack */
.activity-watch {
	display: flex;
}
.activity-watch > .activity-page-bottom {
	flex-shrink: 2;
	flex-grow: 1;
}
.activity-watch > .activity-page-bottom > time {
	width: 100%;
	text-align: right;
	padding-left: 0.125em;
	text-overflow: clip;
}

.search-page:first-child {
	border-top-style: solid;
}
.search-page {
	border: 1px var(--T-border-color);
	border-bottom-style: solid;
}

/* sidebar settings list */
.local-settings {
	padding: 0.3125rem 0.5rem;
}
#\$sidebarEditor > textarea {
	flex: 1;
	resize: none;
	width: 100%;
}
.local-settings > div {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
}
.local-settings > div > button, #\$sidebarEditor > button {
	margin: 1px;
}
.local-settings > div > * {
	flex-grow: 1;
	flex-shrink: 0;
	width: 49%;
	min-width: 6.5em;
}
.expanded-setting {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 5;
}
.local-settings > div > :last-child {
	flex-grow: 1;
}
.local-settings > div > button:nth-child(n) {
	width: auto;
	min-width: unset;
	flex-grow: 0;
}
.local-settings > div > textarea {
	width: 100%;
	height: 3em;
}
.local-settings > div > label {
	font-weight: 500;
	line-height: 1em;
	padding-bottom: .1875em;
}
.local-settings > div {
	column-gap: 0.1875rem; /* todo: we can't use this heck! */
	margin-bottom: 0.3125rem;
}
#\$debugInput {
	resize: vertical;
	overflow-y: scroll;
	width: 100%;
}

/* contain */
#\$sidebarBottom,
.sidebar-comment,
#\$sidebarActivity > .linkBar {
	contain: strict;
}
/* mobile stuff */
@media all and (max-width: 700px) {
	input, textarea, textarea-container {
		font-size: 1em;
	}
	/* message-block { --chat-gutter: 3rem; } */
}

/* ios safari */
@supports (-webkit-touch-callout: none) {
	/* give space to the left so the cursor can reach there */
	textarea-container > textarea {
		padding-left: 2px;
		width: -webkit-fill-available; width: -moz-available; width: stretch;
	}
}

